# pysi

./: pyproject.toml  requirements.txt
src/pysi/util/: shell.py
src/pysi/viewer/: cli.py  viewer.py
src/pysi/wind/model/: base.py
